# MINIST-SVD-Based-Digit-Classification

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  classifier.py  data_preparation.py  plots.py
